UI redone to be in a single page - need to fix cont btn

--- a/public/html/thanks.html
+++ b/public/html/thanks.html
@@ -5,15 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>UI</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
 </head>
 
 <body class="text-left">
     <h1 class="text-capitalize text-center" style="font-size: 25px;"><br>Slimebike Reporter 1.0<br></h1>
     <div class="container" style="width: 340px;">
         <h1 class="text-center justify-content-center align-items-center align-content-center align-self-center mx-auto" style="font-size: 23px;"><br><br>Thank you for being an awesome Samaritan!<br><br><br></h1><a class="btn btn-primary text-center d-flex justify-content-center mx-auto" role="button" style="width: 158px;" href="index.html">Submit new case</a></div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 </body>
 
 </html>
