--- a/public/html/thanks.html
+++ b/public/html/thanks.html
@@ -11,7 +11,11 @@
 <body class="text-left">
     <h1 class="text-capitalize text-center" style="font-size: 25px;"><br>Slimebike Reporter 1.0<br></h1>
     <div class="container" style="width: 340px;">
-        <h1 class="text-center justify-content-center align-items-center align-content-center align-self-center mx-auto" style="font-size: 23px;"><br><br>Thank you for being an awesome Samaritan!<br><br><br></h1><a class="btn btn-primary text-center d-flex justify-content-center mx-auto" role="button" style="width: 158px;" href="index.html">Submit new case</a></div>
+        <h1 class="text-center justify-content-center align-items-center align-content-center align-self-center mx-auto"
+            style="font-size: 23px;"><br><br>Thank you for being an awesome Samaritan!<br><br><br></h1><a
+            class="btn btn-primary text-center d-flex justify-content-center mx-auto" role="button"
+            style="width: 158px;" href="../index.html">Submit new case</a>
+    </div>
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
 </body>
