--- a/public/index.html
+++ b/public/index.html
@@ -5,104 +5,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Slimebike Reporter</title>
+
+    <!-- CSS -->
+    <!-- Local - vendor -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-
+    <!-- Local - custom -->
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- Remote - vendor -->
     <link href="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.css" rel="stylesheet" />
-    <style>
-       .items-collection {
-            margin: 20px 0 0 0;
-        }
 
-        .items-collection label.btn-default.active {
-            background-color: #007ba7;
-            color: #FFF;
-        }
-
-        .items-collection label.btn-default {
-            width: 90%;
-            border: 1px solid #305891;
-            margin: 5px;
-            border-radius: 17px;
-            color: #305891;
-        }
-
-        .items-collection label .itemcontent {
-            width: 100%;
-        }
-
-        .items-collection .btn-group {
-            width: 90%
-        }
-
-        .visually-hidden {
-            position: absolute;
-            left: -100vw;
-
-            /* Note, you may want to position the checkbox over top the label and set the opacity to zero instead. It can be better for accessibilty on some touch devices for discoverability. */
-
-        }
-
-        #map {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            width: 100%;
-        }
-
-        #fit {
-            display: block;
-            position: relative;
-            margin: 0px auto;
-            width: 50%;
-            height: 40px;
-            padding: 10px;
-            border: none;
-            border-radius: 3px;
-            font-size: 12px;
-            text-align: center;
-            color: #fff;
-            background: #ee8a65;
-        }
-    </style>
+    <!-- Javascript -->
     <!-- Local - vendor -->
     <script src="./js/jquery.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <!-- Remote - vendor -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/@zxing/library@latest"></script>
     <script src="https://unpkg.com/xstate@4.7.7/dist/xstate.js"></script>
-
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.js"></script>
-
+    <!-- Local - custom -->
+    <script src="./js/socketcontroller.js"></script>
     <script src="./js/statecontroller.js"></script>
 
-    <script type="text/javascript">
-        $(function () {
-            // This function is called when continue button on the "classification" is clicked
-            $('#classification_continue').click(function (e) {
-                e.preventDefault();
-                // Select the 'a' element of the "location" tab
-                var next_tab = $(
-                    'a[href="#tab_location"]'); //$('.nav-tabs > .active').next('li').find('a');
-                // console.log(next_tab);
-                // If a location tab 'a' is found, then trigger its click event
-                if (next_tab.length > 0) {
-                    next_tab.trigger('click');
-                } else {
-                    $('.nav-tabs li:eq(0) a').trigger('click');
-                }
-            });
-            // This function is called when continue button on the "location" is clicked
-            $('#location_continue').click(function (e) {
-                e.preventDefault();
-                var next_tab = $('a[href="#tab_identification"]');
-                console.log(next_tab);
-                if (next_tab.length > 0) {
-                    next_tab.trigger('click');
-                } else {
-                    $('.nav-tabs li:eq(0) a').trigger('click');
-                }
-            });
-        });
-    </script>
+    <script src="./js/navigationcontroller.js"></script>
 </head>
 
 <body>
@@ -121,8 +46,13 @@
     <div class="tab-content">
         <div class="tab-pane show active" role="tabpanel" id="tab_classification">
             <div class="container" style="width: device-width; max-width: 400px; background-color: #ffffff;">
+                <video id="player" controls autoplay></video>
+                <button id="capture"
+                    class="btn btn-primary text-center d-flex align-items-center mx-auto">Capture</button>
+                <canvas id="canvas" width="100%" height=150></canvas>
+
                 <h1 style="font-size: 20px;"><br>Select all the appropriate parking infractions</h1>
-                <div class="row">
+                <div class="row" id="infraction_list">
                     <div class="form-group">
                         <div class="items-collection">
                             <div class="items ">
@@ -211,11 +141,15 @@
                     </div>
                 </div>
 
-
-                <video id="player" controls autoplay></video>
-                <button id="capture"
-                    class="btn btn-primary text-center d-flex align-items-center mx-auto">Capture</button>
-                <canvas id="canvas" width=320 height=240></canvas>
+                <div class="btn-group d-flex align-items-center mx-auto" role="group" style="width: 300px;" id="company_names">
+                    <input type="radio" class="btn btn-primary " style="width: 100px;" name="company">Lime</input>
+                    <input type="radio" class="btn btn-primary " style="width: 100px;" name="company">Jump</input>
+                    <input type="radio" class="btn btn-primary " style="width: 100px;" name="company">Lyft</input>
+                    <input type="radio" class="btn btn-primary " style="width: 100px;" name="company">Spin</input>
+                    <input type="radio" class="btn btn-primary " style="width: 100px;" name="company">Ofo</input>
+                    <input type="radio" class="btn btn-primary " style="width: 100px;" name="company">Other</input>
+                </div>
+                <br />
 
                 <button type="button" class="btn btn-primary text-center d-flex align-items-center mx-auto"
                     id="classification_continue" style="width: 88px; visibility: hidden;">Continue</button>
@@ -234,76 +168,29 @@
         </div>
         <div class="tab-pane" role="tabpanel" id="tab_identification">
             <div class="container" style="width: device-width; max-width: 400px; background-color: #ffffff;">
-                <h1 class="text-center" style="font-size: 20px;"><br>Please scan the vehicle's QR code</h1><img
-                    class="d-flex d-md-flex align-items-center align-self-baseline mx-auto"
-                    src="https://storage.googleapis.com/support-forums-api/attachment/thread-13090132-506909745012483037.png"
-                    style="width: 310px;">
-                <div class="btn-group d-flex align-items-center mx-auto" role="group" style="width: 300px;"><button
-                        class="btn btn-primary" type="button" style="width: 100px;">Lime</button><button
-                        class="btn btn-primary" type="button" style="width: 100px;">Jump</button><button
-                        class="btn btn-primary" type="button" style="width: 100px;">Lyft</button></div>
-                <div class="btn-group d-flex align-items-center mx-auto" role="group" style="width: 300px;"><button
-                        class="btn btn-primary" type="button" style="width: 100px;">Spin</button><button
-                        class="btn btn-primary" type="button" style="width: 100px;">Ofo</button><button
-                        class="btn btn-primary" type="button" style="width: 100px;">Other</button></div><br />
+                <h1 class="text-center" style="font-size: 20px;"><br>Optionally, please also scan the vehicle's QR code
+                </h1>
+                <div>
+                    <a class="button" id="startButton">Start</a>
+                    <a class="button" id="resetButton">Reset</a>
+                </div>
+                <div id="sourceSelectPanel" style="display:none">
+                    <label for="sourceSelect">Change video source:</label>
+                    <select id="sourceSelect" style="max-width:400px">
+                    </select>
+                </div>
+
+                <label>Result:</label>
+                <pre><code id="result"></code></pre>
+                <video id="video" width="300" height="200" style="border: 1px solid gray"></video>
                 <a class="btn btn-primary text-center d-flex align-items-center mx-auto" role="button"
-                    href="./html/thanks.html" style="width: 88px;">Submit</a>
+                    onclick="socket_submit();" style="width: 88px;">Submit</a>
             </div>
         </div>
-
     </div>
-
-
-    <script>
-        const player = document.getElementById('player');
-        const canvas = document.getElementById('canvas');
-        const context = canvas.getContext('2d');
-        const captureButton = document.getElementById('capture');
-
-        const constraints = {
-            video: true,
-        };
-
-        captureButton.addEventListener('click', () => {
-            context.drawImage(player, 0, 0, canvas.width, canvas.height);
-            var video_element = document.getElementById("player");
-            video_element.parentNode.removeChild(video_element);
-            var cont_btn_element = document.getElementById("classification_continue");
-            cont_btn_element.style.visibility = 'visible';
-            var capture_btn_element = document.getElementById('capture');
-            capture_btn_element.style.visibility = 'hidden';
-            // Stop all video streams.
-            player.srcObject.getVideoTracks().forEach(track => track.stop());
-        });
-
-        navigator.mediaDevices.getUserMedia(constraints)
-            .then((stream) => {
-                // Attach the video stream to the video element and autoplay.
-                player.srcObject = stream;
-            });
-
-        // var map = L.map('map').setView([38.912753, -77.032194], 15);
-
-        // L.marker([38.912753, -77.032194])
-        //     .bindPopup("Hello <b>Leaflet GL</b>!<br>Whoa, it works!")
-        //     .addTo(map)
-        //     .openPopup();
-
-        // var gl = L.mapboxGL({
-        //     accessToken: 'pk.eyJ1IjoiY2hpbnRhbnAiLCJhIjoiY2ppYXU1anVuMThqazNwcDB2cGtneDdkYyJ9.TL6RTyRRFCbvJWyFa4P0Ow',
-        //     // get your own MapTiler token at https://cloud.maptiler.com/ or use MapBox style
-        //     style: 'https://api.maptiler.com/maps/topo/style.json?key=gbetYLSD5vR8MdtZ88AQ'
-        // }).addTo(map);
-        mapboxgl.accessToken =
-            ''
-        var map = new mapboxgl.Map({
-            container: 'map', // HTML container ID
-            style: 'mapbox://styles/mapbox/streets-v9', // style URL
-            center: [-21.9270884, 64.1436456], // starting position as [lng, lat]
-            zoom: 13
-        });
-    </script>
-
+    <script src="./js/qrcodecontroller.js"></script>
+    <script src="./js/videocontroller.js"></script>
+    <script src="./js/mapcontroller.js"></script>
 </body>
 
 </html>
