--- a/public/index.html
+++ b/public/index.html
@@ -46,18 +46,18 @@
     <div class="tab-content">
         <div class="tab-pane show active" role="tabpanel" id="tab_classification">
             <div class="container" style="width: device-width; max-width: 400px; background-color: #ffffff;">
-                <video id="player" controls autoplay></video>
+                <video id="player" controls autoplay style="width: 100%"></video>
                 <button id="capture"
                     class="btn btn-primary text-center d-flex align-items-center mx-auto">Capture</button>
                 <canvas id="canvas" width="100%" height=150></canvas>
 
-                <h1 style="font-size: 20px;"><br>Select all the appropriate parking infractions</h1>
+                <h1 style="font-size: 20px;">Select all the appropriate parking infractions</h1>
                 <div class="row" id="infraction_list">
-                    <div class="form-group">
+                    <div class="form-group d-flex align-items-center mx-auto">
                         <div class="items-collection">
                             <div class="items ">
                                 <div class="info-block block-info clearfix">
-                                    <div data-toggle="buttons" class="btn-group bizmoduleselect">
+                                    <div data-toggle="buttons" class="btn-group bizmoduleselect" style="width: 100%">
                                         <label class="btn btn-light">
                                             <div class="itemcontent">
                                                 <input type="checkbox" class="visually-hidden" autocomplete="off"
@@ -70,7 +70,7 @@
                             </div>
                             <div class="items ">
                                 <div class="info-block block-info clearfix">
-                                    <div data-toggle="buttons" class="btn-group itemcontent">
+                                    <div data-toggle="buttons" class="btn-group itemcontent" style="width: 100%">
                                         <label class="btn btn-light">
                                             <div class="itemcontent">
                                                 <input type="checkbox" class="visually-hidden" autocomplete="off"
@@ -83,7 +83,7 @@
                             </div>
                             <div class="items ">
                                 <div class="info-block block-info clearfix">
-                                    <div data-toggle="buttons" class="btn-group itemcontent">
+                                    <div data-toggle="buttons" class="btn-group itemcontent" style="width: 100%">
                                         <label class="btn btn-light">
                                             <div class="itemcontent">
                                                 <input type="checkbox" class="visually-hidden" autocomplete="off"
@@ -97,7 +97,7 @@
                             </div>
                             <div class="items ">
                                 <div class="info-block block-info clearfix">
-                                    <div data-toggle="buttons" class="btn-group itemcontent">
+                                    <div data-toggle="buttons" class="btn-group itemcontent" style="width: 100%">
                                         <label class="btn btn-light">
                                             <div class="itemcontent">
                                                 <input type="checkbox" class="visually-hidden" autocomplete="off"
@@ -111,7 +111,7 @@
                             </div>
                             <div class="items ">
                                 <div class="info-block block-info clearfix">
-                                    <div data-toggle="buttons" class="btn-group itemcontent">
+                                    <div data-toggle="buttons" class="btn-group itemcontent" style="width: 100%">
                                         <label class="btn btn-light">
                                             <div class="itemcontent">
                                                 <input type="checkbox" class="visually-hidden" autocomplete="off"
@@ -125,7 +125,7 @@
                             </div>
                             <div class="items ">
                                 <div class="info-block block-info clearfix">
-                                    <div data-toggle="buttons" class="btn-group itemcontent">
+                                    <div data-toggle="buttons" class="btn-group itemcontent" style="width: 100%">
                                         <label class="btn btn-light">
                                             <div class="itemcontent">
                                                 <input type="checkbox" class="visually-hidden" autocomplete="off"
@@ -182,9 +182,9 @@
 
                 <label>Result:</label>
                 <pre><code id="result"></code></pre>
-                <video id="video" width="300" height="200" style="border: 1px solid gray"></video>
+                <video id="video" class="d-flex align-items-center mx-auto" width="300" height="200" style="border: 1px solid gray"></video>
                 <a class="btn btn-primary text-center d-flex align-items-center mx-auto" role="button"
-                    onclick="socket_submit();" style="width: 88px;">Submit</a>
+                    onclick="socket_submit();" style="width: 88px; color: rgb(255, 255, 255)">Submit</a>
             </div>
         </div>
     </div>
