Infractions and Operators list now sensitive to city

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,9 @@
     <script src="./js/navigationcontroller.js"></script>
     <script src="./js/statecontroller.js"></script>
     <script src="./js/socketcontroller.js"></script>
-
+    <script src="./js/locationinfo.js"></script>
+    <script src="./js/mapcontroller.js"></script>
+    <script src="./js/operator.js"></script>
     
 </head>
 
@@ -60,8 +62,8 @@
                 <h1 style="font-size: 20px;">Select all the appropriate parking infractions</h1>
                 <div class="row" id="infraction_list">
                     <div class="form-group d-flex align-items-center mx-auto">
-                        <div class="items-collection">
-                            <div class="items ">
+                        <div class="items-collection" id="infraction_checkbox">
+                            <!-- <div class="items ">
                                 <div class="info-block block-info clearfix">
                                     <div data-toggle="buttons" class="btn-group bizmoduleselect" style="width: 100%">
                                         <label class="btn btn-light">
@@ -142,18 +144,18 @@
                                         </label>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
 
                 <div class="btn-group d-flex align-items-center mx-auto" role="group" style="width: 300px;" id="company_names">
-                    <input type="radio" class="btn btn-primary " style="width: 100px;" name="company">Lime</input>
+                    <!-- <input type="radio" class="btn btn-primary " style="width: 100px;" name="company">Lime</input>
                     <input type="radio" class="btn btn-primary " style="width: 100px;" name="company">Jump</input>
                     <input type="radio" class="btn btn-primary " style="width: 100px;" name="company">Lyft</input>
                     <input type="radio" class="btn btn-primary " style="width: 100px;" name="company">Spin</input>
                     <input type="radio" class="btn btn-primary " style="width: 100px;" name="company">Ofo</input>
-                    <input type="radio" class="btn btn-primary " style="width: 100px;" name="company">Other</input>
+                    <input type="radio" class="btn btn-primary " style="width: 100px;" name="company">Other</input> -->
                 </div>
                 <br />
 
