--- a/public/html/thanks.html
+++ b/public/html/thanks.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>UI</title>
+    <title>Slimebike Reporter</title>
+    <link rel="icon" type="image/png" href="../icon/favicon.ico">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
 </head>
 
