--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Slimebike Reporter</title>
-
+    <title>Misplaced Wheels</title>
+    <link rel="icon" type="image/png" href="./icon/favicon.ico">
     <!-- CSS -->
     <!-- Local - vendor -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <!-- Remote - vendor -->
     <link href="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.css" rel="stylesheet" />
-
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <!-- Javascript -->
     <!-- Local - vendor -->
     <script src="./js/jquery.min.js"></script>
@@ -38,15 +38,14 @@
 
 <body>
 
-    <h1 class="text-capitalize text-center" style="font-size: 25px;"><br>Slimebike Reporter 1.0<br></h1>
+    <h1 class="text-capitalize text-center" style="font-size: 25px;"><br>Misplaced Wheels Reporter 1.0<br></h1>
+<br>
 
     <ul class="nav nav-tabs nav nav-pills text-center justify-content-center" id="nav_tabs" role="tablist">
-        <li class="nav-item active"><a class="active nav-link" href="#tab_classification" role="tab"
-                data-toggle="tab">Classification</a>
+        <li class="nav-item active"><a class="active nav-link" href="#tab_classification" role="tab" data-toggle="tab">Classification</a>
         </li>
         <li class="nav-item"><a class="nav-link" href="#tab_location" role="tab" data-toggle="tab">Location</a></li>
-        <li class="nav-item"><a class="nav-link" href="#tab_identification" role="tab"
-                data-toggle="tab">Identification</a></li>
+        <li class="nav-item"><a class="nav-link" href="#tab_identification" role="tab" data-toggle="tab">Identification</a></li>
     </ul>
 
     <div class="tab-content">
@@ -54,120 +53,43 @@
             <div class="container-fluid">
 
                 <div class="card">
-                    <video id="player" controls autoplay class="card-img-top"></video>
+                    <div class="center">
+                        <div class="row" id="image_control">
+                            <div class="col-md-6 col-md-offset-3 center">
+                                <div class="btn-container">
+                                    <!--the three icons: default, ok file (img), error file (not an img)-->
+                                    <h1 class="imgupload"><i class="fa fa-file-image-o"></i></h1>
+                                    <!--this field changes dinamically displaying the filename we are trying to upload-->
+                                    <p id="namefile">Only pics allowed! (jpg,jpeg,bmp,png)</p>
+                                    <!--our custom btn which which stays under the actual one-->
+                                    <button type="button" id="btnup" class="btn btn-primary btn-lg">Browse for your pic!</button>
+                                    <!--this is the actual file input, is set with opacity=0 beacause we wanna see our custom one-->
+                                    <input type="file" accept="image/*" capture="environment" id="wheel_image" name="wheel_image" value="">
+                                </div>
+                            </div>
+                        </div>
+
+                        <!--                    <video id="player" controls autoplay class="card-img-top"></video>
                     <button id="capture"
-                        class="btn btn-primary text-center d-flex align-items-center mx-auto">Capture</button>
-                    <canvas id="canvas"></canvas>
+                        class="btn btn-primary text-center d-flex align-items-center mx-auto">Capture</button>-->
+                        <canvas id="canvas"></canvas>
+                    </div>
                     <div class="card-body">
                         <p class="card-text">Select all parking infractions that apply</p>
 
-                        <div class="card-text form-check" id="infraction_list">
-                           
-
-
-                                <!-- <div class="items ">
-                                <div class="info-block block-info clearfix">
-                                    <div data-toggle="buttons" class="btn-group bizmoduleselect" style="width: 100%">
-                                        <label class="btn btn-light">
-                                            <div class="itemcontent">
-                                                <input type="checkbox" class="visually-hidden" autocomplete="off"
-                                                    value="">
-                                                <h5>Parked in the middle of the sidewalk</h5>
-                                            </div>
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="items ">
-                                <div class="info-block block-info clearfix">
-                                    <div data-toggle="buttons" class="btn-group itemcontent" style="width: 100%">
-                                        <label class="btn btn-light">
-                                            <div class="itemcontent">
-                                                <input type="checkbox" class="visually-hidden" autocomplete="off"
-                                                    value="">
-                                                <h5>Parked in the middle of a driveway</h5>
-                                            </div>
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="items ">
-                                <div class="info-block block-info clearfix">
-                                    <div data-toggle="buttons" class="btn-group itemcontent" style="width: 100%">
-                                        <label class="btn btn-light">
-                                            <div class="itemcontent">
-                                                <input type="checkbox" class="visually-hidden" autocomplete="off"
-                                                    value="">
-
-                                                <h5>Parked blocking handicap access</h5>
-                                            </div>
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="items ">
-                                <div class="info-block block-info clearfix">
-                                    <div data-toggle="buttons" class="btn-group itemcontent" style="width: 100%">
-                                        <label class="btn btn-light">
-                                            <div class="itemcontent">
-                                                <input type="checkbox" class="visually-hidden" autocomplete="off"
-                                                    value="">
-
-                                                <h5>Toppled sideways</h5>
-                                            </div>
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="items ">
-                                <div class="info-block block-info clearfix">
-                                    <div data-toggle="buttons" class="btn-group itemcontent" style="width: 100%">
-                                        <label class="btn btn-light">
-                                            <div class="itemcontent">
-                                                <input type="checkbox" class="visually-hidden" autocomplete="off"
-                                                    value="">
-
-                                                <h5>Abandonded</h5>
-                                            </div>
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="items ">
-                                <div class="info-block block-info clearfix">
-                                    <div data-toggle="buttons" class="btn-group itemcontent" style="width: 100%">
-                                        <label class="btn btn-light">
-                                            <div class="itemcontent">
-                                                <input type="checkbox" class="visually-hidden" autocomplete="off"
-                                                    value="">
-
-                                                <h5>Damaged</h5>
-                                            </div>
-                                        </label>
-                                    </div>
-                                </div>
-                            </div> -->
-
-                           
+                        <div class="" id="infraction_list">
 
                         </div>
                     </div>
                     <div class="card-body">
                         <p class="card-text">Choose the company</p>
-                        <div class="card-text form-check" role="group" style="width: 300px;"
-                            id="company_list">
-                            <!-- <input type="radio" class="btn btn-primary " style="width: 100px;" name="company">Lime</input>
-                    <input type="radio" class="btn btn-primary " style="width: 100px;" name="company">Jump</input>
-                    <input type="radio" class="btn btn-primary " style="width: 100px;" name="company">Lyft</input>
-                    <input type="radio" class="btn btn-primary " style="width: 100px;" name="company">Spin</input>
-                    <input type="radio" class="btn btn-primary " style="width: 100px;" name="company">Ofo</input>
-                    <input type="radio" class="btn btn-primary " style="width: 100px;" name="company">Other</input> -->
+                        <div class="card-text" id="company_list">
+
                         </div>
                     </div>
                     <br />
 
-                    <button type="button" class="btn btn-primary text-center d-flex align-items-center mx-auto"
-                        id="classification_continue" style="width: 88px; visibility: hidden;">Continue</button>
+                    <button type="button" class="btn btn-primary text-center d-flex align-items-center mx-auto" id="classification_continue" style="width: 88px; visibility: hidden;">Continue</button>
 
                 </div>
 
@@ -179,8 +101,7 @@
 
                 <div id="map"></div>
 
-                <button type="button" class="btn btn-primary text-center d-flex align-items-center mx-auto fit"
-                    id="location_continue" style="width: 88px;">Continue</button>
+                <button type="button" class="btn btn-primary text-center d-flex align-items-center mx-auto fit" id="location_continue" style="width: 88px;">Continue</button>
             </div>
         </div>
         <div class="tab-pane" role="tabpanel" id="tab_identification">
@@ -199,15 +120,13 @@
 
                 <label>Result:</label>
                 <pre><code id="result"></code></pre>
-                <video id="video" class="d-flex align-items-center mx-auto" width="300" height="200"
-                    style="border: 1px solid gray"></video>
-                <a class="btn btn-primary text-center d-flex align-items-center mx-auto" role="button"
-                    onclick="socket_submit();" style="width: 88px; color: rgb(255, 255, 255)">Submit</a>
+                <video id="video" class="d-flex align-items-center mx-auto" width="300" height="200" style="border: 1px solid gray"></video>
+                <a class="btn btn-primary text-center d-flex align-items-center mx-auto" role="button" onclick="socket_submit();" style="width: 88px; color: rgb(255, 255, 255)">Submit</a>
             </div>
         </div>
     </div>
     <script src="./js/qrcodecontroller.js"></script>
-    <script src="./js/videocontroller.js"></script>
+    <script src="./js/imagecontroller.js"></script>
     <script src="./js/mapcontroller.js"></script>
 </body>
 
