--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="https://unpkg.com/@zxing/library@latest"></script>
     <script src="https://unpkg.com/xstate@4.7.7/dist/xstate.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
     <!-- Local - custom -->
 
 
