--- a/public/html/thanks.html
+++ b/public/html/thanks.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Slimebike Reporter</title>
+    <meta name="Description"
+        content="A website to report misplaced wheels - report misparked shared bikes and scooters.">
+    <title>Misplaced Wheels</title>
     <link rel="icon" type="image/png" href="../icon/favicon.ico">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
 <body class="text-left">
-    <h1 class="text-capitalize text-center" style="font-size: 25px;"><br>Slimebike Reporter 1.0<br></h1>
+    <div class="row">
+        <img class="mx-auto d-block" src="../images/logo.svg" alt="misplaced wheels logo" id="logo" />
+        <br/>
+        <br/>
+</div>
+
     <div class="container" style="width: 340px;">
         <h1 class="text-center justify-content-center align-items-center align-content-center align-self-center mx-auto"
-            style="font-size: 23px;"><br><br>Thank you for being an awesome Samaritan!<br><br><br></h1><a
+            style="font-size: 23px;"><br><br>Thank you for keeping your city clean.<br><br><br></h1><a
             class="btn btn-primary text-center d-flex justify-content-center mx-auto" role="button"
             style="width: 158px;" href="../index.html">Submit new case</a>
     </div>
-    <script src="../js/jquery.min.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
